tests/error/type_mismatch/def/def.bas
10 DEF FN NUMF(X%) = X% * X%
20 DEF FN STRF(S$) = S$
30 LET A  = FN NUMF(21)
40 LET A  = FN STRF("STRING")
50 LET A$ = FN NUMF(21)
60 LET A% = FN STRF("STRING")